--- a/AFSpotifyTrigger/AFSpotifyTrigger.csproj
+++ b/AFSpotifyTrigger/AFSpotifyTrigger.csproj
@@ -12,9 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
-    <PackageReference Include="SpotifyAPI.Web" Version="3.1.1" />
-    <PackageReference Include="SpotifyAPI.Web.Auth" Version="3.1.1" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.27" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="SpotifyAPI.Web" Version="4.0.0" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
